--- a/ue1/ue1_schuki_andy.tex
+++ b/ue1/ue1_schuki_andy.tex
@@ -50,7 +50,7 @@
 	We take the batch of our training data, calculate the prediction of the network, compare them to the target values using the cross-entropy-loss-function. Then the loss is used to propagate the error back to the network to adapt the weights in the network. 
 	\item[c)] Define the set of action-classes you want to use and complete the class-methods actions to classes
 	and scores to action in $network.py$\\
-	\sol The provided data of the expert imitations comes as a set of free:
+	\sol The provided data of the expert imitations comes as a set of three:
 	\[(steer,gas,brake)\]
 	with
 	\begin{align*}
@@ -80,6 +80,6 @@
 \end{enumerate}
 \section{Network Improvements}
 \begin{enumerate}[a)]
-	\item What does it do?\\\sol These enables you to
+	\item What does it do?\\\sol These enables you to encoperate informations of speed,
 \end{enumerate}
 \end{document}
