add last working stuff

--- a/ue1/ue1_schuki_andy.tex
+++ b/ue1/ue1_schuki_andy.tex
@@ -80,6 +80,9 @@
 \end{enumerate}
 \section{Network Improvements}
 \begin{enumerate}[a)]
-	\item What does it do?\\\sol These enables you to encoperate informations of speed,
+	\item What does it do?\\\sol These enables you to encoperate informations of speed,abs,steer and gyroscope into your network. Therefore not only position of the vehicle can be considered by the network, but also any of these sensors. Therefore it is possible to make different conclusions for seemingly same situations.\\
+	How does the
+	performance change?
+	\\\sol Curves after high speed passes now enable the car to brake first, as it would usually conclude into leaving the racetrack.
 \end{enumerate}
 \end{document}
